fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ p {
     justify-content: space-between;
     align-items: center;
     padding: 15px 10px 10px 30px;
-    z-index: 999;
+    z-index: 3;
     position: fixed;
     top: 0;
     width: 100%;
